# vetlog-buddy

./: pyproject.toml
.github/workflows/: main.yml
docker/: Dockerfile  Makefile  compose.yml
src/vetlog_buddy/: main.py
src/vetlog_buddy/pets/: models.py
src/vetlog_buddy/shared/: config.py  database.py  enums.py  logger.py
src/vetlog_buddy/users/: models.py  repository.py  services.py
tests/integration/: test_users.py
tests/unit/: test_user_suspicious.py
